fix the alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,24 @@
 	max-width: 50% !important;
 }
 
+.profile {
+	padding-top: 10px;
+}
+
+.fileUpload {
+	position: relative;
+	overflow: hidden;
+	margin: 10px;
+}
+.fileUpload input.upload {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
